# solitaire_chess_mpi

./: README.md  askparam.c  askparam.h  mach_nicht_alles_kaputt.c  main.c  main.h  makefile  spielbrett.c  spielbretter.c  spielbretter.h  spielfeld.c  spielfeld.h  spielfiguren.c  spielfiguren.c~  spielfiguren.h  spielfiguren.h~
Bericht/: Spielbrettverteilung_4x4.txt  hashtableanlayse.txt  papo_bericht.mm  quellen.txt
Bericht/Abschlusspraesentation/: .main.tex.swp  main.snm  main.tex  main.vrb  makefile
Bericht/Beamerfolien/: flos_beamer_vorlage.tex
Bericht/tex/: Laufzeitanalyse.ods  solitaireschach.tex
Entwurf/: Quelltextkonventionen_C
mpi_slurm/: solitaire_chess.mpi  solitaire_chess_2x5.mpi  solitaire_chess_3x3.mpi  solitaire_chess_3x4.mpi  solitaire_chess_4x4.mpi  solitaire_chess_4x4_1node_1thread.mpi  solitaire_chess_4x4_1node_openmp.mpi
mpi_slurm/error/: job-38284_3x4.err  job-38287_3x3.err  job-38288_3x3.err  job-38290_3x3.err  job-38291_3x3.err  job-38292_3x3.err  job-38293_3x3.err  job-38294_3x3.err  job-38295_3x3.err  job-38296_3x3.err  job-38297_3x3.err  job-38298_3x3.err
src/: CMakeLists.txt  askparam.c  askparam.h  main.c  makefile  spielbretter.c  spielbretter.h  spielfiguren.c  spielfiguren.h
